// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Actions Action and method 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-a-c1=""
  >
    <button
      _ngcontent-a-c1=""
    >
      Action and Method
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Addon|Actions Action only 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-a-c0=""
  >
    <button
      _ngcontent-a-c0=""
    >
      Action only
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;
